--- a/index.html
+++ b/index.html
@@ -5,14 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Website</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&family=Russo+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <section class="section">
-        <div></div>
-        <h1>Hi, I'm Mohib Arsala Fornt-End & Back-End Developer</h1>
-        <p>This is my dreams world!</p>
-        <a href=""><Link>Link</Link></a>
+    <section class="s1">
+        <div class="main-container">
+            <div class="greeting-wrapper">
+               <h1>Hi, I'm Mohib Arsala Developer</h1>
+            </div>
+
+            <div class="intro-wrapper">
+                <div class="nav-wrapper">
+                    <div class="dots-wrapper">
+                        <div id="dot-1" class="browser-dot"></div>
+                        <div id="dot-2" class="browser-dot"></div>
+                        <div id="dot-3" class="browser-dot"></div>
+                    </div>
+                    <ul id="navigation">
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="left-column">
+                    <img id="profile-pic" src="images/mohib.jpg" alt="image">
+                    <h5 style="text-align:center; line-height: 0;">Personalize Theme</h5>
+
+                    <div id="theme-option-wrapper">
+                      <div id="light-mode" class="theme-dot"></div>
+                      <div id="blue-mode" class="theme-dot"></div>
+                      <div id="greed-mode" class="theme-dot"></div>
+                      <div id="purple-mode" class="theme-dot"></div>
+                    </div>
+                    <P id="setting-note">Theme sitting is changible as well <br> saved for your next visit</P>
+                </div>
+                <div class="right-column">
+                    right-column
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="s2">
+        <div class="main-container">
+            ABout
+        </div>
+    </section>
+
+    <section class="s1">
+        <div class="main-container">
+            Portfolio
+        </div>
+    </section>
+
+    <section class="s2">
+        <div class="main-container">
+            Contact
+        </div>
     </section>
 </body>
 </html>
