--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div id="theme-option-wrapper">
                       <div id="light-mode" class="theme-dot"></div>
                       <div id="blue-mode" class="theme-dot"></div>
-                      <div id="greed-mode" class="theme-dot"></div>
+                      <div id="green-mode" class="theme-dot"></div>
                       <div id="purple-mode" class="theme-dot"></div>
                     </div>
                     <P id="setting-note">Theme sitting is changible as well <br> saved for your next visit</P>
