nov section is completed, moving to new section about me and portfolio

--- a/index.html
+++ b/index.html
@@ -38,10 +38,19 @@
                       <div id="green-mode" class="theme-dot"></div>
                       <div id="purple-mode" class="theme-dot"></div>
                     </div>
-                    <P id="setting-note">Theme sitting is changible as well <br> saved for your next visit</P>
+                    <P id="sittings-note">Theme sitting is changible as well <br> saved for your next visit</P>
                 </div>
                 <div class="right-column">
-                    right-column
+                  <div id="preview-shadow"> 
+                    <div id="preview">
+                        <div id="corner-tr" class="corner"></div>
+                        <div id="corner-tl" class="corner"></div>
+                        <h3>What I Do</h3>
+                        <p>I was lead developer in a past life, Now i enjoy Software development. </p>
+                        <div id="corner-br" class="corner"></div>
+                        <div id="corner-bl" class="corner"></div>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
