about section updated

--- a/index.html
+++ b/index.html
@@ -42,11 +42,16 @@
                 </div>
                 <div class="right-column">
                   <div id="preview-shadow"> 
+                    <div id="corner0-tr" class="corner0"></div>
+                    <div id="corner0-tl" class="corner0"></div>
+                    <div id="corner0-br" class="corner0"></div>
+                    <div id="corner0-bl" class="corner0"></div>
+
                     <div id="preview">
                         <div id="corner-tr" class="corner"></div>
                         <div id="corner-tl" class="corner"></div>
                         <h3>What I Do</h3>
-                        <p>I was lead developer in a past life, Now i enjoy Software development. </p>
+                        <p>I was Data Manager in a past life, Now i enjoy Software development. </p>
                         <div id="corner-br" class="corner"></div>
                         <div id="corner-bl" class="corner"></div>
                     </div>
@@ -57,8 +62,20 @@
     </section>
 
     <section class="s2">
+
         <div class="main-container">
-            ABout
+            <div class="about-me">
+               <h4>More About Me</h4>
+               <p>I build new projects to tickle my brain for Construction Services & Comarcial.</p>
+               <P>while, I keep busy building projects, but still searching for greart team and new projects that interest me.</P>
+            </div>
+
+            <br>
+              <h4>TOP EXPERTISE</h4>
+
+            <div class="social-links">
+
+            </div>
         </div>
     </section>
 
