--- a/index.html
+++ b/index.html
@@ -64,19 +64,38 @@
     <section class="s2">
 
         <div class="main-container">
+         <div class="about-wrapper">
             <div class="about-me">
                <h4>More About Me</h4>
                <p>I build new projects to tickle my brain for Construction Services & Comarcial.</p>
                <P>while, I keep busy building projects, but still searching for greart team and new projects that interest me.</P>
-            </div>
 
-            <br>
+            <hr>
               <h4>TOP EXPERTISE</h4>
-
+              <p>Front-End developer with primary focus on Node, React & Django: <br> <a target="_blank" href="Mohib' Resume.pdf">Download Resume!</a></p>
+              <div id="skills">
+                  <ul class="ul-1">
+                      <li>JavaScript</li>
+                      <li>Python</li>
+                      <li>Node</li>
+                      <li>React</li>
+                      <li>Postgres</li>
+                  </ul>
+                  <ul class="ul-2">
+                      <li>Google Maps API</li>
+                      <li>D3</li>
+                      <li>Git</li>
+                      <li>Heroku</li>
+                      <li>HTML/CSS</li>
+                  </ul>
+              </div>
+            </div>
             <div class="social-links">
-
+             ;klvsadjvsjvakslfsajdf;lsafklsajfd;sadjfkl;asflasfasjfklsajfksajdf
+             skdfjsa;kfjas;lkfjs;klafjskl;fjalskjfasjfd
             </div>
         </div>
+       </div>
     </section>
 
     <section class="s1">
