profile section has been updated

--- a/index.html
+++ b/index.html
@@ -91,8 +91,11 @@
               </div>
             </div>
             <div class="social-links">
-             ;klvsadjvsjvakslfsajdf;lsafklsajfd;sadjfkl;asflasfasjfklsajfksajdf
-             skdfjsa;kfjas;lkfjs;klafjskl;fjalskjfasjfd
+                 <img id="webside-img" src="images/social.png" alt="">
+                 <h3>Find me on linkedin, Github & Twitter</h3>
+                 <a target="_blank" href="www.linkedin.com/in/mohib-arsala">Linkedin: @mohib-arsala</a>
+                 <br>
+                 <a target="_blank" href=github.com/mohib008>Github: @mohib008</a>
             </div>
         </div>
        </div>
@@ -100,7 +103,30 @@
 
     <section class="s1">
         <div class="main-container">
-            Portfolio
+            <h3 style="text-align:center">My Past projects</h3>
+            <div class="project-wrapper">
+                <div class="project">
+                    <img class="thumbnail" src="images/web1.png" alt="">
+                    <div class="projects-review">
+                        <h6 class="project-title">SDR Construcrtion.inc Website</h6>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="thumbnail" src="images/web2.png" alt="">
+                    <div class="projects-review">
+                        <h6 class="project-title">Face Recoganition Project</h6>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="thumbnail" src="images/web1.png" alt="">
+                    <div class="projects-review">
+                        <h6 class="project-title">Cell Phones Repair Website</h6>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
