--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                         <div id="dot-3" class="browser-dot"></div>
                     </div>
                     <ul id="navigation">
-                        <li><a href="">Contact</a></li>
+                        <li><a target="_self" href="tel:6477867378">Contact
+                        </a></li>
+                        
                     </ul>
                 </div>
                 <div class="left-column">
@@ -96,6 +98,8 @@
                  <a target="_blank" href="www.linkedin.com/in/mohib-arsala">Linkedin: @mohib-arsala</a>
                  <br>
                  <a target="_blank" href=github.com/mohib008>Github: @mohib008</a>
+                 <br>
+                <a target="_self" href="tel:6477867378">Call Me: 6477867378</a>
             </div>
         </div>
        </div>
@@ -105,34 +109,61 @@
         <div class="main-container">
             <h3 style="text-align:center">My Past projects</h3>
             <div class="project-wrapper">
+              <div>
                 <div class="project">
                     <img class="thumbnail" src="images/web1.png" alt="">
                     <div class="projects-review">
                         <h6 class="project-title">SDR Construcrtion.inc Website</h6>
-                        <p></p>
+                        <p class="project-intro">oifasdfuiwoeuiasfddsfiuas</p>
+                        <a href="#">Read More</a>
                     </div>
                 </div>
+              </div>
+
+              <div>
                 <div class="project">
                     <img class="thumbnail" src="images/web2.png" alt="">
                     <div class="projects-review">
                         <h6 class="project-title">Face Recoganition Project</h6>
-                        <p></p>
+                        <p class="project-intro">kflasjdfkueiryifjsdkfsaiuf</p>
+                        <a href="#">Read More</a>
                     </div>
                 </div>
+              </div>
+
+              <div>
                 <div class="project">
                     <img class="thumbnail" src="images/web1.png" alt="">
                     <div class="projects-review">
                         <h6 class="project-title">Cell Phones Repair Website</h6>
-                        <p></p>
+                        <p class="project-intro">;fkgfoiqewuhfjaskhfdopwqeijfs</p>
+                        <a href="#">Read More</a>
                     </div>
                 </div>
+              </div>
             </div>
         </div>
     </section>
 
     <section class="s2">
         <div class="main-container">
-            Contact
+            <h3 style="text-align: center;">Get in Touch</h3>
+          <form id="contact-form">
+            <label for="">Name</label>
+            <input type="text" class="input-field" name="name">
+
+            <label for="">Subject</label>
+            <input type="text" class="input-field" name="subject">
+
+            <label for="">Email</label>
+            <input type="text" class="input-field" name="email">
+
+            <label for="">Message</label>
+            <textarea class="input-field" name="name"></textarea>
+
+            
+            <input id="submit-btn" type="submit" value="Send">
+          </form>
         </div>
     </section>
 </body>
