update from surface

--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@
                     <img class="thumbnail" src="images/web1.png" alt="">
                     <div class="projects-review">
                         <h6 class="project-title">SDR Construcrtion.inc Website</h6>
-                        <p></p>
+                        <p>fgkl;'erjkgoewgjdlkf;jgl;dsjfglk;d<br>jsfgl;sdlkfgdfl;gkldfg</p>
                     </div>
                 </div>
                 <div class="project">
                     <img class="thumbnail" src="images/web2.png" alt="">
                     <div class="projects-review">
                         <h6 class="project-title">Face Recoganition Project</h6>
-                        <p></p>
+                        <p>'dfgkkerop[erpgjkl;dfjgldsjfg<br>qeiorjkldjgfdsgdfk</p>
                     </div>
                 </div>
                 <div class="project">
                     <img class="thumbnail" src="images/web1.png" alt="">
                     <div class="projects-review">
                         <h6 class="project-title">Cell Phones Repair Website</h6>
-                        <p></p>
+                        <p>Cell Pepair Websitejfklsdj;fgkljdf<br>gkdfjgkldjgkjdfgkljdskglj</p>
                     </div>
                 </div>
             </div>
