--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&family=Russo+One&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/app.css">
-    
+
     <link id="theme-style" rel="stylesheet" type="text/css" href="">
 </head>
 <body>
@@ -163,18 +163,18 @@
     <section class="s2">
         <div class="main-container">
             <h3 style="text-align: center;">Get in Touch</h3>
-          <form id="contact-form">
+          <form id="contact-form" target="_blank" action="https://formsubmit.co/mohib.0008@gmail.com" method="POST">
             <label for="">Name</label>
-            <input type="text" class="input-field" name="name">
+            <input type="text" class="input-field" name="name" placeholder="Full Name" required>
 
             <label for="">Subject</label>
             <input type="text" class="input-field" name="subject">
 
             <label for="">Email</label>
-            <input type="text" class="input-field" name="email">
+            <input type="text" class="input-field" name="email" placeholder="Email Address" required>
 
             <label for="">Message</label>
-            <textarea class="input-field" name="name"></textarea>
+            <textarea class="input-field" name="message" placeholder="Your Message" rows="10"></textarea>
 
             
             <input id="submit-btn" type="submit" value="Send">
